gap fixed

--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ nav {
     /* border: 2px solid red; */
     display: flex;
     width: 900px;
+    gap: 30px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
